--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -95,7 +95,9 @@ a{
     font-size: 36px;
     color: #3B5DA0;
     padding: 2%;
+    font-weight: bolder;
 }
+
 
 .contenedor_acerca{
     width: 70%;
@@ -117,7 +119,7 @@ a{
 
 .contenedor_tecnologias_completo{
     width: 98%;
-    height: 500px;
+    height: 330px;
     display: flex;
     flex-direction: row;
     margin-left: 2%;
@@ -126,7 +128,7 @@ a{
 
 .seccion{
     width: 50%;
-    height: 500px;
+    height: 305px;
     text-align: center;
     padding: 5%;
     border-radius: 2%;
@@ -135,8 +137,8 @@ a{
 }
 
 .espacio_tecno{
-    width: 100%;
-    height: 1000px;
+    width: 60%;
+    height: 530px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -144,7 +146,7 @@ a{
 }
 
 .lenguajes{
-    width: 40%;
+    width: 50%;
     height: 200px;
     display: flex;
     flex-direction: column;
@@ -152,6 +154,10 @@ a{
     background-color: #537BCC;
     border-radius: 2%;
     justify-content: center;
+}
+
+h4{
+    font-weight: bolder;
 }
 
 .lenguajes h4{
@@ -255,7 +261,7 @@ a{
 
 .frameworks{
     width: 100%;
-    height: 92px;
+    height: 94px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -285,3 +291,115 @@ a{
     background-repeat: no-repeat;
     background-size: contain;
 }
+
+.espacio_tecno2{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -23%;
+    margin-left: -5%;
+    justify-content: center;
+}
+
+.espacios{
+    width: 100%;
+    height: 200px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.test{
+    width: 30%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: #6B8BC9;
+    border-radius: 2%;
+    justify-content: center;
+    margin-top: 2%;
+    align-items: center;
+    margin-left: 0%;
+    margin-right: 1%;
+}
+
+.test h4{
+    color: white;
+}
+
+.junit{
+    width: 60%;
+    height: 50px;
+    background-image: url("/img/tecnologias/JUnit_5_Banner.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-top: 5%;
+}
+
+.gestor{
+    width: 30%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: #6B8BC9;
+    border-radius: 2%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+    margin-right: 1%;
+}
+
+.gestor h4{
+    color: white;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+.maven{
+    width: 50%;
+    height: 50px;
+    background-image: url("/img/tecnologias/maven.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.repositorios{
+    width: 28%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: #6B8BC9;
+    border-radius: 2%;
+    justify-content: center;
+    margin-top: 2%;
+}
+
+.repositorios h4{
+    color: white;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+.github{
+    width: 40%;
+    height: 50px;
+    background-image: url("/img/github-png.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    margin-left: 20%;
+}
+
+.git{ 
+    width: 40%;
+    height: 50px;
+    background-image: url("/img/tecnologias/git.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+}
+
+
