--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -402,4 +402,35 @@ h4{
     display: flex;
 }
 
+.estudios{
+    width: 92.8%;
+    height: 430px;
+    display: flex;
+    margin-left: 2%;
+}
 
+.lista_estudios{
+    width: 80%;
+    height: 400px;
+    padding: 5%;
+    text-align: start;
+    text-decoration: double;
+    background-color: #3B5DA0;
+    color: white;
+    text-shadow: whitesmoke;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+}
+
+.titulo_estudios{
+    width: 60%;
+    height: 400px;
+    padding: 10%;
+    justify-content: center;
+    background-color: #D9D9D9;
+    color: #3B5DA0;
+    font-weight: bolder;
+    display: flex;
+    flex-direction: row;
+}
