--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -434,3 +434,37 @@ h4{
     display: flex;
     flex-direction: row;
 }
+
+.personalidad_intereses{
+    width: 92.8%;
+    height: 330px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-left: 2%;  
+}
+
+.espacio_personalidad{
+    background-color: #D9D9D9;
+    color: #3B5DA0;
+    text-align: left;
+    padding: 5%;
+    margin-right: 1%;
+}
+
+.titulos_pers_int{
+    text-align: center;
+    font-size: xx-large;
+    margin-bottom: 2%;
+}
+
+.espacio_interes{
+    background-color: #3B5DA0;
+    color: #D9D9D9;
+    text-align: left;
+    padding: 5%;
+}
+
+footer{
+    
+}
