--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -466,5 +466,63 @@ h4{
 }
 
 footer{
-    
+    width: 100%;
+    height: 300px;
+    margin-top: 5%;
+    background-color: #3B5DA0;
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
+
+.contacto_footer{
+    width: 30%;
+    height: 300px;
+    display: flex;
+    padding: 2%;
+}
+
+.links_footer{
+    width: 70%;
+    height: 300px;
+    padding: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+}
+
+.link{
+    color: white;
+}
+
+.linkedin{
+    width: 33%;
+    height: 50px;
+    background-image: url("/img/linkedin.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 2%;
+    display: flex;
+}
+
+.githubc{
+    width: 33%;
+    height: 50px;
+    background-image: url("/img/github-png.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 2%;
+    display: flex;
+}
+
+.mail{
+    width: 33%;
+    height: 50px;
+    background-image: url("/img/mail.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 2%;
+    display: flex;
 }
