--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -430,6 +430,7 @@ h4{
     justify-content: center;
     background-color: #D9D9D9;
     color: #3B5DA0;
+    font-size: larger;
     font-weight: bolder;
     display: flex;
     flex-direction: row;
@@ -437,7 +438,7 @@ h4{
 
 .personalidad_intereses{
     width: 92.8%;
-    height: 330px;
+    height: 500px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -445,6 +446,7 @@ h4{
 }
 
 .espacio_personalidad{
+    height: 350px;
     background-color: #D9D9D9;
     color: #3B5DA0;
     text-align: left;
@@ -459,6 +461,7 @@ h4{
 }
 
 .espacio_interes{
+    height: 350px;
     background-color: #3B5DA0;
     color: #D9D9D9;
     text-align: left;
@@ -467,8 +470,7 @@ h4{
 
 footer{
     width: 100%;
-    height: 300px;
-    margin-top: 5%;
+    height: 150px;
     background-color: #3B5DA0;
     color: white;
     display: flex;
@@ -477,14 +479,14 @@ footer{
 
 .contacto_footer{
     width: 30%;
-    height: 300px;
+    height: 150px;
     display: flex;
     padding: 2%;
 }
 
 .links_footer{
     width: 70%;
-    height: 300px;
+    height: 150px;
     padding: 5%;
     display: flex;
     flex-direction: row;
@@ -525,4 +527,16 @@ footer{
     background-repeat: no-repeat;
     margin: 2%;
     display: flex;
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width:768px) {
+
+
 }
