--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -47,7 +47,6 @@ a{
     background-repeat: no-repeat;
     background-size: contain;
     border-radius: 100%;
-
 }
 
 .contenedor_info{
@@ -531,12 +530,281 @@ footer{
 
 
 
+@media screen and (min-width:769px) and (max-width: 1200px) {
 
+    .info_personal{
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .contenedor_imagen{
+        width: 100%;
+        height: 300px;
+    }
+    
+    .foto {
+        width: 40%;
+        border-radius: 0%;
+        margin-left: 35%;
+    }
+    
+    .contenedor_info{
+        width: 100%;
+    }
+    
+    .contenedor_acerca{
+        width: 90%;
+        height: 300px;
+        margin-left: 5%;
+        border-radius: 30px;
+    }
+    
+    .contenedor_tecnologias_completo{
+        width: 95%;
+        height: 330px;
+        display: flex;
+        flex-direction: row;
+        margin-left: 5%;
+        margin-top: 10%;
+    }
 
+    .seccion{
+        width: 35%;
+        height: 270px;
+    }
+    
+    .espacio_tecno{
+        width: 65%;
+        height: 430px;
+    }
+    
+    .lenguajes{
+        width: 50%;
+        height: 160px;
+    }
+    
+    .bases_de_datos{
+        width: 100%;
+        height: 80px;
+    }
+    
+    .frameworks{
+        width: 100%;
+        height: 75px;
+    }
+    
+    .espacio_tecno2{
+        width: 100%;
+        height: 170px;
+    }
+    
+    .junit{
+        width: 80%;
+    }
+    
+    .lista_estudios{
+        width: 80%;
+        height: 420px;
+        font-size: 14px;
+    }
 
+    .titulo_estudios{
+        width: 25%;
+        height: 420px;
+    }
+
+    .personalidad_intereses{
+        height: 900px;
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .espacio_personalidad{
+        height: 400px;
+        background-color: #D9D9D9;
+        color: #3B5DA0;
+        text-align: left;
+        padding: 5%;
+        margin-right: 1%;
+    }
+    
+    footer{
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .links_footer{
+        width: 60%;
+        height: 300px;
+        padding: 0%;
+        margin-left: 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    .linkedin{
+        width: 10%;
+        margin-right: 7%;
+    }
+    
+    .githubc{
+        width: 10%;
+        margin-right: 7%;
+    }
+    
+    .mail{
+        width: 10%;
+    }
+    
+    .links_footer div{
+        width: 100%;
+        display: flex;
+    }
+    
+}
 
 
 @media screen and (max-width:768px) {
 
+    .info_personal{
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .contenedor_imagen{
+        width: 100%;
+        height: 300px;
+    }
+    
+    .foto {
+        width: 40%;
+        border-radius: 0%;
+        margin-left: 35%;
+    }
+    
+    .contenedor_info{
+        width: 100%;
+    }
+    
+    .contenedor_acerca{
+        width: 90%;
+        height: 300px;
+        margin-left: 5%;
+        border-radius: 30px;
+    }
+    
+    .contenedor_tecnologias_completo{
+        width: 95%;
+        height: 330px;
+        display: flex;
+        flex-direction: row;
+        margin-left: 5%;
+        margin-top: 10%;
+    }
+    
+    .seccion{
+        width: 35%;
+        height: 250px;
+    }
+    
+    .espacio_tecno{
+        width: 65%;
+        height: 360px;
+    }
+    
+    .lenguajes{
+        width: 50%;
+        height: 140px;
+    }
+    
+    .bases_de_datos{
+        width: 100%;
+        height: 80px;
+    }
+    
+    .frameworks{
+        width: 100%;
+        height: 60px;
+    }
+    
+    .espacio_tecno2{
+        width: 100%;
+        height: 150px;
+    }
+    
+    .junit{
+        width: 80%;
+    }
+    
+    .lista_estudios{
+        width: 80%;
+        height: 420px;
+        font-size: 14px;
+    }
+    
+    .titulo_estudios{
+        width: 25%;
+        height: 420px;
+    }
 
+    .personalidad_intereses{
+        height: 900px;
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .espacio_personalidad{
+        height: 400px;
+        background-color: #D9D9D9;
+        color: #3B5DA0;
+        text-align: left;
+        padding: 5%;
+        margin-right: 1%;
+    }
+    
+    footer{
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .links_footer{
+        width: 60%;
+        height: 300px;
+        padding: 0%;
+        margin-left: 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    .linkedin{
+        width: 10%;
+        margin-right: 7%;
+    }
+    
+    .githubc{
+        width: 10%;
+        margin-right: 7%;
+    }
+    
+    .mail{
+        width: 10%;
+    }
+    
+    .links_footer div{
+        width: 100%;
+        display: flex;
+    }
+    
 }
