--- a/css/index-styless.css
+++ b/css/index-styless.css
@@ -30,6 +30,7 @@ a{
     height: 300px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     background-color: #D9D9D9;
 }
 
@@ -39,7 +40,7 @@ a{
     padding: 3%;
     align-items: center;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .foto {
@@ -56,7 +57,8 @@ a{
     height: 300px;
     display: flex;
     flex-direction: column;
-    margin: 0%;
+    justify-content: center;
+    margin: -0%;
 }
 
 .contenedor_info h1{
@@ -66,8 +68,8 @@ a{
     background-color: #A2A2A2;
     color: #3B5DA0;
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    margin-top: -1%;
+    margin-bottom: -1%;
 }
 
 .contenedor_info h2{
@@ -84,6 +86,7 @@ a{
 .contenedor_info h3{
     height: 33.3%;
     width: 100%;
+    padding: 5%;
     background-color: #D9D9D9;
     color: #3B5DA0;
     text-align: center;
@@ -616,7 +619,7 @@ footer{
     
     .espacio_tecno2{
         width: 100%;
-        height: 170px;
+        height: 150px;
     }
     
     .junit{
@@ -760,7 +763,8 @@ footer{
     
     .espacio_tecno2{
         width: 100%;
-        height: 150px;
+        margin-top: -10%;
+        height: 170px;
     }
     
     .junit{
@@ -770,9 +774,12 @@ footer{
     .lista_estudios{
         width: 80%;
         height: 420px;
-        font-size: 14px;
     }
     
+    .lista_estudios ul, li{
+        font-size: 1rem;
+    }
+
     .titulo_estudios{
         width: 25%;
         height: 420px;
@@ -874,22 +881,36 @@ footer{
     .contenedor_info h1{
         font-size: 1.2rem;
     }
+
+    .espacio_tecno, .espacio_tecno2{
+        font-size: 0.8rem;
+    }
+
+    .espacio_tecno2{
+        width: 100%;
+        margin-top: -15%;
+        height: 170px;
+    }
     
     .seccion{
         font-size: 0.8rem;
     }
     
     .estudios{
-        height: 460px;
+        height: 480px;
         font-size: 0.5;
     }
     
     .lista_estudios{
-        height: 430px;
-        font-size: 0.5rem;
+        height: 470px;
+    }
+
+    .lista_estudios ul,li{
+        font-size: 0.8rem;
     }
 
     .titulo_estudios{
+        height: 470px;
         font-size: 1rem;
     }
 
@@ -903,8 +924,8 @@ footer{
     }
     
     .mail{
-        width: 15%;
-        height: 40px;
+        width: 20%;
+        height: 50px;
     }
     
     
